2005-07-09 Alain Magloire
	Fix PR 97963
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferncePage.java
	+ src/org/eclipse/cdt/internal/ui/preferences/PreviewSourceViewer.java

2005-07-09 Alain Magloire
	Fix PR 90419
	* src/org/eclipse/cdt/internal/coreext/util/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java

2005-07-08 Alain Magloire
	Fix for the CFileType UI
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-07-06 Vladimir Hirsl
	Disabled Add Folder/File button in CPathIncludeSymbolEntryPerFilePage.

	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPerFilePage.java

2005-07-06 Alain Magloire
	Fix PR 99130: no leading underscore in the guard header name
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewSourceFIleGenerator.java

2005-07-06  Alain Magloire
	PR 102789: Add Include dialog typo
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties

2005-07-06  Alain Magloire
	PR 102622: OpenIncludeAction improvement, patch from: Robert O'Callahan
	* src/org/eclipse/cdt/internal/ui/OpenIncludeAction.java

2005-07-06  Alain Magloire
	PR 102619: Performance improvement patch from: Robert O'Callahan
	* src/org/eclipse/cdt/ui/CElementContentProvider.java

2005-07-05  Alain Magloire
	Fix for PR 102327: ContentType framework.
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-06-29 Alain Magloire
	Fix PR 102159: NPE in the referencesSearchGroup: fillcontextMenu.